# svlm

./: .gitignore  README.md  create_sweep.sh  pyproject.toml  run_agent.sh  run_sweep.sh  sweep_launcher.py  sweep_train.py
configs/: __init__.py  config.yaml  sweep.yaml  sweep_grid.yaml  sweep_random.yaml
configs/data/: coco_chair.yaml  coco_local.yaml  pope.yaml  pope_adversarial.yaml  pope_popular.yaml  pope_random.yaml  refcoco.yaml  refcoco_plus.yaml  refcocog.yaml
configs/decoding/: default.yaml
configs/evaluation/: default.yaml
configs/method/: baseline.yaml  erw_only.yaml  erw_pva.yaml  erw_pva_ven.yaml  erw_ven.yaml
configs/model/: minicpm_v.yaml  qwen2_vl_2b.yaml
configs/run/: baseline.yaml  erw_only.yaml  erw_pva.yaml  erw_pva_ven.yaml  erw_ven.yaml
examples/: run_sweep_example.py
outputs/2025-10-19/13-47-29/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-19/13-48-30/.hydra/: hydra.yaml
outputs/2025-10-19/13-50-52/.hydra/: hydra.yaml
outputs/2025-10-19/13-54-14/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-19/13-55-20/.hydra/: hydra.yaml
outputs/2025-10-19/14-00-34/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-19/14-06-55/.hydra/: hydra.yaml
outputs/2025-10-19/14-10-32/.hydra/: config.yaml  hydra.yaml
outputs/2025-10-19/14-24-42/.hydra/: hydra.yaml
outputs/2025-10-19/14-26-11/.hydra/: hydra.yaml
outputs/2025-10-19/14-27-23/.hydra/: hydra.yaml
outputs/baseline/: metadata.json
src/svlm/: __init__.py  attention.py  calibrator.py  config_schema.py  evaluation.py  model_adapter.py  pipeline.py  runner.py
(+48 files in other folders)
